Fixed more spacing

--- a/src/scss/abstracts/fonts.scss
+++ b/src/scss/abstracts/fonts.scss
@@ -22,7 +22,6 @@ h3 {
   // display: flex;
   font-family: $font-headings;
   font-weight: 500;
-  padding-top: 1.75rem;
 }
 
 h4 {
