--- a/src/scss/components/card.scss
+++ b/src/scss/components/card.scss
@@ -191,6 +191,7 @@
 }
 
 .frame {
+  margin-bottom: 1rem;
   aspect-ratio: 13/9;
   border: 30px solid;
   border-image-source: url("/img/pattern.png");
