--- a/src/scss/components/slider.scss
+++ b/src/scss/components/slider.scss
@@ -41,7 +41,7 @@
 
   & img {
     margin-inline: 1.5rem;
-    max-width: 88vw;
+    max-width: 95vw;
     height: 76vh;
     scroll-snap-align: center;
   }
