--- a/src/scss/layout/footer.scss
+++ b/src/scss/layout/footer.scss
@@ -22,7 +22,7 @@ footer {
   ul {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: stretch;
     @media only screen and (min-width: 768px) {
       flex-direction: row;
       justify-content: center;
@@ -31,13 +31,17 @@ footer {
       padding: 0;
       display: flex;
       flex-direction: row;
+      justify-content: center;
       list-style: none;
       a {
+        width: 40vw;
         display: flex;
         align-items: center;
+        justify-content: space-between;
         @media only screen and (min-width: 768px) {
           flex-direction: column;
           justify-content: center;
+          width: initial;
         }
         img {
           width: 24px;
