--- a/src/scss/utils/containers.scss
+++ b/src/scss/utils/containers.scss
@@ -28,9 +28,6 @@
 .header-grid {
   width: 100%;
   @media only screen and (min-width: 1200px) {
-    h1 {
-      width: 60%;
-    }
     display: flex;
     justify-content: space-between;
     align-items: end;
